--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# db configurations
+config/
 # Logs
 logs
 *.log
@@ -121,7 +123,7 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
-
+  
 # yarn v2 
 .yarn/cache 
 .yarn/unplugged
